<resources>
    <string name="app_name">quiz</string>

    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="button_cheat">Cheat</string>

    <string name="question1">1 + 1 = 3?</string>
    <string name="question2">1 + 2 = 3?</string>
    <string name="question3">2 + 4 = 7?</string>
    <string name="question4">1 + 6 = 7?</string>
    <string name="toast_correct">true</string>
    <string name="toast_incorrect">false</string>
    <string name="cheat_warning">Are you sure about this? :( </string>
</resources>